/*
Get the protobuf compiler:
You will need to manually compile protobuf v3.0.0-beta-2
https://github.com/google/protobuf/releases/tag/v3.0.0-beta-2

Compile with:
cd path/to/protos/
protoc --python_out=./ message.proto
*/

syntax = "proto3";
import "objects.proto";

//This is the message structure for OpenBazaar messages going over the wire
message Message {
    bytes messageID          = 1;
    Node sender              = 2;
    Command command          = 3;
    uint32 protoVer          = 4;
    repeated bytes arguments = 5;
    bool testnet             = 6;
    bytes signature          = 7;
}

//A list of commands accepted by nodes
enum Command {
    PING                    = 0;
    STUN                    = 1;
    HOLE_PUNCH              = 2;
    STORE                   = 3;
    DELETE                  = 4;
    INV                     = 5;
    VALUES                  = 6;
    BROADCAST               = 7;
    MESSAGE                 = 8;
    FOLLOW                  = 9;
    UNFOLLOW                = 10;
    ORDER                   = 11;
    ORDER_CONFIRMATION      = 12;
    COMPLETE_ORDER          = 13;
    FIND_NODE               = 14;
    FIND_VALUE              = 15;
    GET_CONTRACT            = 16;
    GET_IMAGE               = 17;
    GET_PROFILE             = 18;
    GET_LISTINGS            = 19;
    GET_USER_METADATA       = 20;
    GET_CONTRACT_METADATA   = 21;
    GET_FOLLOWING           = 22;
    GET_FOLLOWERS           = 23;
    GET_RATINGS             = 24;
    DISPUTE_OPEN            = 25;
    DISPUTE_CLOSE           = 26;
    REFUND                  = 27;

    // Error responses
    BAD_REQUEST             = 400;
    NOT_FOUND               = 404;
    CALM_DOWN               = 420;
    UNKNOWN_ERROR           = 520;
}
